Spatial navigation: Fix condition for being container

In spatial navigation, next focus candidate is selected
within container.
Current condition for being container is as follows:
1) DocumentNode
2) Not DocumentNode and can scroll in input direction.

Because 2), behavior can be different according to current
scrolling status. This introduces unintuitive behavior.

This patch fix second condition as follows:
Not DocumentNode and has overflow property in input direction.

Bug: 763206
Change-Id: If4060ca565f2248bd00891b6f66639d8950b7fd7