third_party/WebKit/Source/core/page/SpatialNavigation.h
@@ -131,6 +131,7 @@ struct FocusCandidate {
 bool HasOffscreenRect(Node*, WebFocusType = kWebFocusTypeNone);
 bool ScrollInDirection(LocalFrame*, WebFocusType);
 bool ScrollInDirection(Node* container, WebFocusType);
+bool HasOverflowInDirection(const Node* container, WebFocusType);
 bool CanScrollInDirection(const Node* container, WebFocusType);
 bool CanScrollInDirection(const LocalFrame*, WebFocusType);
 bool CanBeScrolledIntoView(WebFocusType, const FocusCandidate&);
@@ -139,8 +140,7 @@ bool AreElementsOnSameLine(const FocusCandidate& first_candidate,
 void DistanceDataForNode(WebFocusType,
                          const FocusCandidate& current,
                          FocusCandidate&);
-Node* ScrollableEnclosingBoxOrParentFrameForNodeInDirection(WebFocusType,
-                                                            Node*);
+Node* OverflowBoxOrParentFrameForNodeInDirection(WebFocusType, Node*);
 LayoutRect NodeRectInAbsoluteCoordinates(Node*, bool ignore_border = false);
 LayoutRect FrameRectInAbsoluteCoordinates(LocalFrame*);
 LayoutRect VirtualRectForDirection(WebFocusType,
